[tool.poetry]
name = "nekontrol"
version = "0.2.1"
description = "A program for testing kattis solutions with input and output."
authors = [
    "Emanuel S <emanuel@empa.xyz>",
]
readme = "README.md"
homepage = "https://github.com/Quaqqer/nekontrol"
repository = "https://github.com/Quaqqer/nekontrol"
keywords = ["kattis", "competetive programming"]
packages = [
    { include = "nekontrol", from = "src" },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
termcolor = "^2.2.0"
requests = "^2.28.2"
appdirs = "^1.4.4"
natsort = "^8.2.0"

[tool.poetry.scripts]
nk = 'nekontrol.interactive.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
