[tool.poetry]
name = "nekontrol"
version = "0.2.5"
description = "A program for testing kattis solutions with input and output."
authors = [
    "Emanuel S <emanuel@empa.xyz>",
]
readme = "README.md"
homepage = "https://github.com/Quaqqer/nekontrol"
repository = "https://github.com/Quaqqer/nekontrol"
keywords = ["kattis", "competitive programming"]
packages = [
    { include = "nekontrol", from = "src" },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
termcolor = "^2.3.0"
requests = "^2.31.0"
appdirs = "^1.4.4"
natsort = "^8.4.0"
rich = "^13.6.0"
lxml = "^4.9.3"

[tool.poetry.scripts]
nk = 'nekontrol.interactive.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
pytest = "^7.4.0"
pyright = "^1.1.331"

[tool.pyright]
reportIncompatibleMethodOverride = true
pythonVersion = "3.11"
